Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35576

Missing documentation for QOpenGLTexture, QOpenGLPixelTransferOptions

XMLWordPrintable

      Missing documentation for CoordnateDirecton, Filter, Pixel Type, Textre Unit Reset, Wrap Mode.

      For QOpenGLPixelTransferOptions totally missing documentation.

      Also how to does bind texture binding sampler for shader?
      How to update just one pixel in texture?

      Missing these basic details.

        For Gerrit Dashboard: QTBUG-35576
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            glararan Lukáš Veteška
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes