Doc: Fix issues with QOpenGLTexture enumerations

Use correct parameters for \enum commands, and add documentation
for QOpenGLTexture::Filter enumeration.

Task-number: QTBUG-35576
Change-Id: If7099da0b2b570c28e683126f0ba3a885d80f741
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>